--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,6 +16,7 @@ h1 {
 
 h2 {
     font-size: small;
+    margin-bottom: 5px;
 }
 
 h3 {
@@ -39,6 +40,7 @@ p, li {
 header {
     width: 90%;
     margin: auto;
+    margin-bottom: 20px;
 }
 
 #logo {
@@ -67,13 +69,12 @@ a:hover {
     padding-top: 20px;
 }
 
-#filters_form {
+#filter_form {
     margin: 20px 0px;
 }
 
 form, #research {
     display: flex;
-    flex-direction: row;
 }
 
 #research {
@@ -111,8 +112,8 @@ form, #research {
 
 .filter_icon {
     color: #0065FC;
-    background-color: rgb(208, 232, 252);
-    border: rgb(208, 232, 252);
+    background-color: #DEEBFF;
+    border: #DEEBFF;
     border-radius: 50px 50px;
     padding: 10px 10px;
 }
@@ -141,7 +142,7 @@ input:hover {
     padding: 5px 10px;
 }
 
-#economic, #family, #romantic, #animals {
+.filter {
     border-top: solid 2px #F2F2F2;
     border-right: solid 2px #F2F2F2;
     border-bottom: solid 2px #F2F2F2;
@@ -155,4 +156,98 @@ label, p, .fa-map-marker-alt {
     align-items: center;
     margin-top: 0px;
     margin-bottom: 0px;
+}
+
+article {
+    width: 60%;
+    margin-left: 5%;
+    margin-right: 30px;
+    padding-left: 30px;
+    border: #F2F2F2 solid;
+    background-color: #F2F2F2;
+    border-radius: 10px 10px;
+}
+
+#accomodations {
+    width: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.accomodation_pic {
+    width: 180px;
+    height: 110px;
+    border-radius: 10px 10px 1px 1px;
+}
+
+.accomodation_description {
+    padding-left: 10px;
+}
+
+.accomodation_border {
+    border: white 2px;
+    background-color: white;
+    border-radius: 10px 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-right: 20px;
+    padding: 5px 5px;
+}
+
+#accomodation_section {
+    display: flex;
+}
+
+aside {
+    width: 30%;
+    margin-right: 5%;
+    border: #F2F2F2;
+    background-color: #F2F2F2;
+    border-radius: 10px 10px;
+    padding: 10px 20px;
+}
+
+#popular {
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+}
+
+.fa-chart-line {
+    margin-top: 20px;
+}
+
+.popular_pic {
+    width: 100px;
+    height: 110px;
+    margin-right: 20px;
+    border-radius: 10px 1px 1px 10px;
+}
+
+#popular-chart_line {
+    display: flex;
+    justify-content: space-between;
+}
+
+.popular_accomodation {
+    display: flex;
+}
+.popular_description {
+    display: flex;
+    flex-direction: column;
+}
+
+.popular_title {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.fa-star.blue {
+    color: #0065FC;
+    font-size: x-small;
+}
+.fa-star {
+    color: #F2F2F2;
+    font-size: x-small;
 }
