--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,6 +23,10 @@ h3 {
     font-size: smaller;
 }
 
+strong {
+    color: #0065FC;
+}
+
 #logo {
     margin-bottom: 20px;
 }
@@ -40,7 +44,8 @@ p, li {
 header {
     width: 90%;
     margin: auto;
-    margin-bottom: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 #logo {
@@ -66,7 +71,7 @@ a {
 a:hover {
     color: #0065FC;
     border-top: solid 1px #0065FC;
-    padding-top: 20px;
+    padding-top: 40px;
 }
 
 #filter_form {
@@ -78,14 +83,14 @@ form, #research {
 }
 
 #research {
-   width: 30%;
+   width: 25%;
    margin: 10px 0px;
-   border: solid 1px #F2F2F2;
-   border-radius: 12px 12px;
 }
 
 #research_button {
     padding: 10px 20px;
+    border: #F2F2F2 solid 1px;
+    cursor: auto;
 }
 
 #clic_research {
@@ -93,10 +98,15 @@ form, #research {
     border-radius: 1px 10px 10px 1px;
     padding-right: 10px;
     color: white;
+    cursor: pointer;
 }
 
 #clic_research:focus {
     outline: none;
+}
+
+.fa-search {
+    display: none;
 }
 
 #information {
@@ -125,7 +135,7 @@ input:focus {
 input {
     border: none;
     background-color: white;
-    padding-left: 10px;
+    cursor: pointer;
 }
 
 input:hover {
@@ -139,7 +149,7 @@ input:hover {
     border: solid 1px #F2F2F2;
     border-radius: 50px 50px;
     margin-right: 10px;
-    padding: 5px 10px;
+    padding: 4px 7px;
 }
 
 .filter {
@@ -158,26 +168,30 @@ label, p, .fa-map-marker-alt {
     margin-bottom: 0px;
 }
 
+.cover_image {
+    object-fit: cover;
+}
+
 article {
     width: 60%;
     margin-left: 5%;
     margin-right: 40px;
+    padding-top: 20px;
     padding-left: 30px;
-    border: #F2F2F2 solid;
     background-color: #F2F2F2;
     border-radius: 10px 10px;
 }
 
-#accomodations {
+#accomodation {
     width: auto;
     display: flex;
     flex-wrap: wrap;
 }
 
-.accomodation_pic {
-    width: 180px;
+.accomodation_image {
+    width: 190px;
     height: 110px;
-    border-radius: 10px 10px 1px 1px;
+    border-radius: 15px 15px 1px 1px;
 }
 
 .accomodation_description {
@@ -185,13 +199,22 @@ article {
 }
 
 .accomodation_border {
-    border: white 2px;
     background-color: white;
-    border-radius: 10px 10px;
-    margin-bottom: 10px;
+    border-radius: 20px 20px;
+    margin-bottom: 20px;
     margin-top: 10px;
     margin-right: 20px;
-    padding: 5px 5px;
+    padding: 4px 4px;
+    cursor: pointer;
+}
+
+.accomodation_popular_border {
+    background-color: white;
+    border-radius: 20px 20px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    padding: 4px 4px;
+    cursor: pointer;
 }
 
 #accomodation_section {
@@ -201,27 +224,26 @@ article {
 aside {
     width: 30%;
     margin-right: 5%;
+    padding: 20px 40px;
     border: #F2F2F2;
     background-color: #F2F2F2;
     border-radius: 10px 10px;
-    padding: 10px 20px;
 }
 
 #popular {
     display: flex;
     flex-direction: column;
-    padding-left: 20px;
 }
 
 .fa-chart-line {
     margin-top: 20px;
 }
 
-.popular_pic {
-    width: 100px;
-    height: 110px;
+.popular_image {
+    width: 140px;
+    height: 130px;
     margin-right: 20px;
-    border-radius: 10px 1px 1px 10px;
+    border-radius: 15px 1px 1px 15px;
 }
 
 #popular-chart_line {
@@ -256,7 +278,7 @@ aside {
     width: 90%;
     margin: auto;
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 #activity {
@@ -268,45 +290,181 @@ aside {
 .activity_border {
     border:#F2F2F2 solid 1px;
     background-color: white;
-    border-radius: 10px 10px;
+    border-radius: 20px 20px;
     box-shadow: 10px 5px 5px #F2F2F2;
     margin-right: 40px;
     margin-bottom: 40px;
+    cursor: pointer;
 }
 
 .activity_border_last {
     border:#F2F2F2 solid 1px;
     background-color: white;
-    border-radius: 10px 10px;
+    border-radius: 20px 20px;
     box-shadow: 10px 5px 5px #F2F2F2;
     margin-bottom: 40px;
+    cursor: pointer;
 }
 
 .activity_image {
-    border-radius: 10px 10px 1px 1px;
+    border-radius: 15px 15px 1px 1px;
 }
 
 .activity_description {
     padding-left: 20px;
     padding-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 .activity_sm_size {
-    width: 260px;
+    width: 252px;
     height: 120px;
 }
 
 .activity_md_size {
-    width: 260px;
+    width: 252px;
     height: 160px;
 }
 
 .activity_lg_size {
-    width: 260px;
+    width: 252px;
     height: 360px;
 }
 
 .activity_half_size {
-    width: 260px;
+    width: 252px;
     height: 140px;
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    border: #F2F2F2 solid;
+    background-color: #F2F2F2;
+    padding: 5%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+p {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+@media only screen and (max-width : 320px) {
+    nav {
+        display: flex;
+    }
+
+    ul {
+        display: flex;
+        flex-direction: column-reverse;
+        flex-wrap: wrap;
+    }
+
+    #clic_research {
+        display: none;
+    }
+
+    #research_button {
+        border: #F2F2F2 solid 1px;
+        border-right: none;
+        padding-right: 30px;
+    }
+
+    .fa-search {
+        display: flex;
+        align-items: center;
+        color: white;
+        border: #0065FC 1px solid;
+        background-color: #0065FC;
+        border-radius: 1px 10px 10px 1px;
+        padding: 10px;
+    }
+
+    .filter {
+        display: inline-block;
+        margin-left: 0px;
+        margin-bottom: 10px;
+    }
+
+    #filter_form {
+        display: inline-block;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    input {
+        padding-left: 8px;
+    }
+
+    label {
+        margin-bottom: 10px;
+    }
+
+    .fa-info {
+        display: flex;
+        align-items: flex-start;
+    }
+
+    article {
+        width: auto;
+        margin: auto;
+        background-color: white;
+        padding: 10px 10px;
+    }
+
+    .accomodation_image {
+        width: 280px;
+        height: 110px;
+    }
+
+    #accomodation_section {
+        display: flex;
+        flex-direction: column-reverse;
+        padding-bottom: 0px;
+    }
+
+    .accomodation_border {
+        box-shadow: 10px 5px 5px #F2F2F2;
+        margin: 0px;
+        margin-bottom: 10px;
+    }
+
+    aside {
+        width: auto;
+        margin: auto;
+        padding: 10px 10px 30px;
+        margin-bottom: 10px;
+    }
+
+    .popular_accomodation {
+        margin-bottom: 0px;
+        padding-top: 0px;
+    }
+
+    #activity_section {
+        margin-top: 20px;
+    }
+
+    .activity_border {
+        margin-bottom: 15px;
+        margin-right: 0px;
+    }
+
+    .activity_border_last {
+        margin-bottom: 15px;
+    }
+
+    .activity_image {
+        width: 280px;
+        height: 110px;
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
 }
