--- a/stylesheet.css
+++ b/stylesheet.css
@@ -468,3 +468,76 @@ p {
         padding-bottom: 15px;
     }
 }
+
+@media only screen and (min-width : 321px) and (max-width : 768px) {
+    header {
+        margin: 30px 30px;
+    }
+
+    .filter {
+        margin-left: 12px;
+        padding-right: 12px;
+    }
+
+    aside {
+        width: auto;
+        margin-bottom: 20px;
+        margin-right: 0px;
+        margin-bottom: 0px;
+    }
+
+    #accomodation_section {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    #all_popular{
+        display: flex;
+        width: min-content;
+    }
+
+    .popular_accomodation {
+        display: inline-block;
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+
+    .popular_image {
+        width: 195px;
+        margin-right: 0px;
+        border-radius: 15px 15px 1px 1px;
+    }
+
+    .popular_title, .popular_star {
+        padding-left: 10px;
+    }
+
+    article {
+        width: auto;
+        background-color: white;
+        margin: 20px 30px;
+        padding: 0px 0px;
+    }
+
+    .accomodation_image {
+        width: 202px;
+    }
+    
+    .accomodation_border {
+        margin: 10px 10px;
+        box-shadow: #F2F2F2 10px 5px 5px;
+    }
+
+    #activity_section {
+        margin: 20px 30px;
+    }
+
+    .activity_image {
+        width: 310px;
+    }
+
+    .activity_border, .activity_border_last {
+        margin-right: 13px;
+        margin-left: 13px;
+    }
+}
