--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
 @font-face {
     font-family: "raleway";
     src: url("raleway/Raleway-Regular.ttf") format("truetype");
+    src: url("ralewy/Raleway-SemiBold.ttf") format("truetype");
     font-style: normal;
     font-weight: normal;
 }
@@ -12,14 +13,22 @@ body {
 
 h1 {
     font-size: medium;
+    margin-bottom: 0px;
 }
 
 h2 {
-    font-size: small;
-    margin-bottom: 5px;
+    font-size: medium;
+    margin-bottom: 0px;
+
 }
 
 h3 {
+    font-size: smaller;
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+
+h4 {
     font-size: smaller;
 }
 
@@ -91,6 +100,7 @@ form, #research {
     padding: 10px 20px;
     border: #F2F2F2 solid 1px;
     cursor: auto;
+    color: black;
 }
 
 #clic_research {
@@ -120,6 +130,10 @@ form, #research {
     border-radius: 10px 1px 1px 10px;
 }
 
+label {
+    font-weight: bold;
+}
+
 .filter_icon {
     color: #0065FC;
     background-color: #DEEBFF;
@@ -136,6 +150,7 @@ input {
     border: none;
     background-color: white;
     cursor: pointer;
+    font-weight: bold;
 }
 
 input:hover {
@@ -153,6 +168,7 @@ input:hover {
 }
 
 .filter {
+    display: flex;
     border-top: solid 2px #F2F2F2;
     border-right: solid 2px #F2F2F2;
     border-bottom: solid 2px #F2F2F2;
@@ -201,9 +217,7 @@ article {
 .accomodation_border {
     background-color: white;
     border-radius: 20px 20px;
-    margin-bottom: 20px;
-    margin-top: 10px;
-    margin-right: 20px;
+    margin: 10px 20px 10px 0px;
     padding: 4px 4px;
     cursor: pointer;
 }
@@ -236,7 +250,7 @@ aside {
 }
 
 .fa-chart-line {
-    margin-top: 20px;
+    margin-top: 15px;
 }
 
 .popular_image {
@@ -292,8 +306,9 @@ aside {
     background-color: white;
     border-radius: 20px 20px;
     box-shadow: 10px 5px 5px #F2F2F2;
-    margin-right: 40px;
-    margin-bottom: 40px;
+    margin-right: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     cursor: pointer;
 }
 
@@ -302,7 +317,8 @@ aside {
     background-color: white;
     border-radius: 20px 20px;
     box-shadow: 10px 5px 5px #F2F2F2;
-    margin-bottom: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     cursor: pointer;
 }
 
@@ -317,23 +333,23 @@ aside {
 }
 
 .activity_sm_size {
-    width: 252px;
+    width: 260px;
     height: 120px;
 }
 
 .activity_md_size {
-    width: 252px;
-    height: 160px;
-}
-
-.activity_lg_size {
-    width: 252px;
-    height: 360px;
+    width: 259px;
+    height: 180px;
 }
 
 .activity_half_size {
-    width: 252px;
-    height: 140px;
+    width: 259px;
+    height: 150px;
+}
+
+.activity_lg_size {
+    width: 259px;
+    height: 360px;
 }
 
 footer {
@@ -352,14 +368,12 @@ p {
 }
 
 @media only screen and (max-width : 320px) {
-    nav {
-        display: flex;
+    h1 {
+        margin-bottom: 10px;
     }
 
-    ul {
-        display: flex;
-        flex-direction: column-reverse;
-        flex-wrap: wrap;
+    h3 {
+        margin-top: 20px;
     }
 
     #clic_research {
@@ -370,6 +384,7 @@ p {
         border: #F2F2F2 solid 1px;
         border-right: none;
         padding-right: 30px;
+        cursor: auto;
     }
 
     .fa-search {
@@ -380,12 +395,14 @@ p {
         background-color: #0065FC;
         border-radius: 1px 10px 10px 1px;
         padding: 10px;
+        cursor: pointer;
     }
 
     .filter {
         display: inline-block;
         margin-left: 0px;
         margin-bottom: 10px;
+        padding-right: 8px;
     }
 
     #filter_form {
@@ -414,7 +431,7 @@ p {
         padding: 10px 10px;
     }
 
-    .accomodation_image {
+    .accomodation_image, .activity_image {
         width: 280px;
         height: 110px;
     }
@@ -428,13 +445,13 @@ p {
     .accomodation_border {
         box-shadow: 10px 5px 5px #F2F2F2;
         margin: 0px;
-        margin-bottom: 10px;
+        margin-top: 10px;
     }
 
     aside {
         width: auto;
         margin: auto;
-        padding: 10px 10px 30px;
+        padding: 10px 10px 20px;
         margin-bottom: 10px;
     }
 
@@ -447,18 +464,9 @@ p {
         margin-top: 20px;
     }
 
-    .activity_border {
-        margin-bottom: 15px;
-        margin-right: 0px;
-    }
-
-    .activity_border_last {
-        margin-bottom: 15px;
-    }
-
-    .activity_image {
-        width: 280px;
-        height: 110px;
+    .activity_border, .activity_border_last {
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     footer {
@@ -475,8 +483,9 @@ p {
     }
 
     .filter {
-        margin-left: 12px;
-        padding-right: 12px;
+        margin-left: 14px;
+        padding-right: 6px;
+        padding-left: 0px;
     }
 
     aside {
@@ -539,5 +548,11 @@ p {
     .activity_border, .activity_border_last {
         margin-right: 13px;
         margin-left: 13px;
+        margin-top: 20px;
+        margin-bottom: 10px;
+    }
+
+    footer {
+        padding-top: 25px;
     }
 }
