--- a/stylesheet.css
+++ b/stylesheet.css
@@ -196,7 +196,7 @@ label, p, .fa-map-marker-alt {
 article {
     width: 60%;
     margin-left: 5%;
-    margin-right: 32px;
+    margin-right: 16px;
     padding: 16px 32px;
     background-color: #F2F2F2;
     border-radius: 10px 10px;
@@ -240,7 +240,6 @@ article {
 }
 
 aside {
-    width: 30%;
     margin-right: 5%;
     padding: 16px 32px;
     border: #F2F2F2;
@@ -260,7 +259,7 @@ aside {
 .popular_image {
     width: 140px;
     height: 130px;
-    margin-right: 20px;
+    margin-right: 16px;
     border-radius: 15px 1px 1px 15px;
 }
 
@@ -436,6 +435,7 @@ p {
     .filter {
         display: inline-block;
         margin-left: 0px;
+        margin-right: 8px;
         margin-bottom: 10px;
         padding-right: 8px;
     }
@@ -519,15 +519,38 @@ p {
     }
 }
 
+
+@media only screen and (min-width : 752px) and (max-width : 767px) {
+    .accomodation_image {
+        width: 310px;
+    }
+
+    .activity_sm_size {
+        width: 310px;
+        height: 120px;
+    }
+    
+    .activity_md_size {
+        width: 310px;
+        height: 180px;
+    }
+    
+    .activity_half_size {
+        width: 310px;
+        height: 150px;
+    }
+    
+    .activity_lg_size {
+        width: 310px;
+        height: 360px;
+    }
+}
+
 @media only screen and (min-width : 768px) and (max-width : 1023px) {
     #inscription {
         display: none;
     }
     
-    header {
-        margin: 30px 30px;
-    }
-
     .filter {
         margin-left: 14px;
         padding-left: 0px;
@@ -577,10 +600,6 @@ p {
     .accomodation_border {
         margin: 10px 10px;
         box-shadow: #F2F2F2 10px 5px 5px;
-    }
-
-    #activity_section {
-        margin: 20px 30px;
     }
 
     .activity_image {
