--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,7 +53,7 @@ p, li {
     justify-content: space-between;
 }
 
-#nav_mobile, #inscription, .fa-search {
+#nav-mobile, #inscription, .fa-search {
     display: none;
 }
 
@@ -86,11 +86,11 @@ a {
     padding-top: 40px;
 }
 
-#filter_form {
+#filter-form {
     margin: 20px 0px;
 }
 
-form, #research, #information, #accomodation_section, .popular_accomodation {
+form, #research, #information, #accomodation-section, .popular-accomodation {
     display: flex;
 }
 
@@ -175,11 +175,11 @@ label, p, .fa-map-marker-alt {
     margin-bottom: 0px;
 }
 
-.cover_image {
+.cover-image {
     object-fit: cover;
 }
 
-article {
+#accomodation {
     width: 60%;
     margin-left: 5%;
     margin-right: 16px;
@@ -188,7 +188,7 @@ article {
     border-radius: 10px 10px;
 }
 
-#accomodation {
+article, #activity {
     width: auto;
     display: flex;
     justify-content: center;
@@ -205,19 +205,11 @@ article {
     padding-left: 10px;
 }
 
-.accomodation_border {
+.accomodation-border {
     background-color: white;
     border-radius: 20px 20px;
-    margin: 8px 8px;
-    padding: 4px 4px;
-    cursor: pointer;
-}
-
-.accomodation_popular_border {
-    background-color: white;
-    border-radius: 20px 20px;
-    margin: 8px 8px;
-    padding: 4px 4px;
+    margin: 8px 6px 8px;
+    padding: 5px 5px;
     cursor: pointer;
 }
 
@@ -236,6 +228,14 @@ aside {
 
 .fa-chart-line {
     margin-top: 15px;
+}
+
+.popular-accomodation-border {
+    background-color: white;
+    border-radius: 20px 20px;
+    margin: 8px 8px 16px;
+    padding: 5px 5px;
+    cursor: pointer;
 }
 
 .popular_image {
@@ -270,20 +270,14 @@ aside {
     font-size: x-small;
 }
 
-#activity_section {
+#activity-section {
     width: 90%;
     margin: auto;
     margin-top: 50px;
     margin-bottom: 20px;
 }
 
-#activity {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.activity_border {
+.activity-border {
     border:#F2F2F2 solid 1px;
     background-color: white;
     border-radius: 20px 20px;
@@ -303,19 +297,19 @@ aside {
     margin-bottom: 0px;
 }
 
-.activity_sm_size {
+.activity_sm-size {
     height: 120px;
 }
 
-.activity_md_size {
+.activity_md-size {
     height: 180px;
 }
 
-.activity_half_size {
+.activity_half-size {
     height: 150px;
 }
 
-.activity_lg_size {
+.activity_lg-size {
     height: 360px;
 }
 
@@ -332,12 +326,12 @@ p {
     padding-bottom: 5px;
 }
 
-@media only screen and (max-width : 767px) {
+@media only screen and (max-width : 320px) {
     h1 {
         margin-bottom: 10px;
     }
 
-    h2 {
+    h2, h5 {
         margin-left: 16px;
     }
 
@@ -355,7 +349,7 @@ p {
         margin-bottom: 16px;
     }
 
-    #nav_mobile {
+    #nav-mobile {
         display: block;
     }
 
@@ -386,7 +380,7 @@ p {
     #research_button {
         border: #F2F2F2 solid 1px;
         border-right: none;
-        padding-right: 30px;
+        padding-right: 40px;
         cursor: auto;
     }
 
@@ -403,13 +397,11 @@ p {
 
     .filter {
         display: inline-block;
-        margin-left: 0px;
-        margin-right: 8px;
-        margin-bottom: 10px;
+        margin: 0px 2px 8px 0px;
         padding-right: 8px;
     }
 
-    #filter_form {
+    #filter-form {
         display: inline-block;
         margin-top: 15px;
         margin-bottom: 15px;
@@ -420,7 +412,7 @@ p {
     }
 
     label {
-        margin-bottom: 10px;
+        margin-bottom: 16px;
     }
 
     .fa-info {
@@ -428,56 +420,53 @@ p {
         align-items: flex-start;
     }
 
-    article {
-        width: auto;
-        margin: 16px 16px;
-        background-color: white;
-        padding: 4px 4px;
+    .fa-chart-line:before {
+        padding-right: 8px;
     }
 
     .accomodation_image, .activity_image {
-        width: 330px;
+        width: 260px;
         height: 110px;
     }
 
-    #accomodation_section {
+    #accomodation, #activity-section {
+        width: auto;
+        background-color: #FFF;
+        padding: 16px 0px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    #accomodation-section {
         display: flex;
         flex-direction: column-reverse;
         padding-bottom: 0px;
     }
 
-    .accomodation_border {
-        box-shadow: 10px 5px 5px #F2F2F2;
+    .accomodation-border, .activity-border {
+        box-shadow: 8px 8px 8px #F2F2F2;
         margin: 8px 8px;
     }
 
     aside {
-        width: auto;
         margin-right: 0px;
-        padding: 16px 16px;
-        margin-bottom: 10px;
+        padding: 8px 8px;
+        border-radius: inherit;
     }
 
     .popular_image {
         padding-top: 4px;
     }
 
-    .popular_accomodation {
+    .popular-accomodation {
         margin-bottom: 0px;
         padding-top: 0px;
     }
 
-    #activity_section {
-        margin: 16px 16px;
-    }
-
-    .activity_border {
-        margin-top: 16px;
-        margin-bottom: 16px;
-    }
-
-    #activity_section {
+    #activity-section {
         width: auto;
+        margin-top: 0px;
+        padding-top: 0px;
     }
 
     footer {
@@ -488,30 +477,249 @@ p {
     }
 }
 
+@media only screen and (min-width : 321px) and (max-width : 691px) {
+    h1 {
+        margin-bottom: 10px;
+    }
 
-@media only screen and (min-width : 752px) and (max-width : 767px) {
+    h2, h5 {
+        margin-left: 16px;
+    }
+
+    h3 {
+        margin-top: 8px;
+    }
+
+    #nav_header, #clic_research {
+        display: none;
+    }
+
+    #header-nav {
+        display: flex;
+        align-items: center;
+        margin-bottom: 16px;
+    }
+
+    #nav-mobile {
+        display: block;
+    }
+
+    #inscription {
+        display: flex;
+        justify-content: flex-end;
+    }
+    
+    #accomodation_activity {
+        display: flex;
+        justify-content: space-around;
+        margin-bottom: 32px;
+    }
+
+    #accomodation_activity a {
+        border-top: none;
+        padding-bottom: 16px;
+        border-bottom: solid 2px #F2F2F2;
+        flex: 1;
+        text-align: center;
+    }
+
+    #accomodation_activity a:hover {
+        padding-top: 0px;
+        border-bottom: solid 2px #0065FC;
+    }
+
+    #research_button {
+        border: #F2F2F2 solid 1px;
+        border-right: none;
+        padding-right: 80px;
+        cursor: auto;
+    }
+
+    .fa-search {
+        display: flex;
+        align-items: center;
+        color: white;
+        border: #0065FC 1px solid;
+        background-color: #0065FC;
+        border-radius: 1px 10px 10px 1px;
+        padding: 10px;
+        cursor: pointer;
+    }
+
+    .filter {
+        display: inline-block;
+        margin: 0px 8px 8px 0px;
+        padding-right: 8px;
+    }
+
+    #filter-form {
+        display: inline-block;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    input {
+        padding-left: 8px;
+    }
+
+    label {
+        margin-bottom: 16px;
+    }
+
+    .fa-info {
+        display: flex;
+        align-items: flex-start;
+    }
+
+    .fa-chart-line:before {
+        padding-right: 8px;
+    }
+
+    .accomodation_image, .activity_image {
+        width: 320px;
+        height: 110px;
+    }
+
+    #accomodation, #activity-section {
+        width: auto;
+        background-color: #FFF;
+        padding: 16px 0px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    #accomodation-section {
+        display: flex;
+        flex-direction: column-reverse;
+        padding-bottom: 0px;
+    }
+
+    .accomodation-border, .activity-border {
+        box-shadow: 8px 8px 8px #F2F2F2;
+        margin: 8px 8px;
+    }
+
+    aside {
+        margin-right: 0px;
+        padding: 8px 8px;
+        border-radius: inherit;
+    }
+
+    .popular_image {
+        padding-top: 4px;
+    }
+
+    .popular-accomodation {
+        margin-bottom: 0px;
+        padding-top: 0px;
+    }
+
+    #activity-section {
+        width: auto;
+        margin-top: 0px;
+        padding-top: 0px;
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        padding: 16px 16px;
+    }
+}
+
+@media only screen and (min-width : 692px) and (max-width : 767px) {    
+    h2, h5 {
+        margin-left: 48px;
+    }
+
+    input {
+        padding-left: 8px;
+    }
+
+    .filter {
+        display: inline-block;
+        margin: 16px 8px 0px 0px;
+        padding-right: 8px;
+    }
+
+    #filter-form {
+        display: inline-block;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    #accomodation-section {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    aside {
+        margin-right: 0px;
+        padding: 0px 0px;
+        border-radius: inherit;
+    }
+
+    .fa-chart-line:before {
+        margin-right: 40px;
+    }
+
+    #popular {
+        padding-top: 16px;
+        padding-bottom: 16px;
+    }
+
+    .popular_image {
+        width: 260px;
+    }
+
+    .popular-accomodation-border {
+        margin-right: 40px;
+        margin-left: 40px;
+    }
+
+    #accomodation {
+        width: auto;
+        background-color: #FFF;
+        padding: 8px 0px 0px;
+        margin: 16px 0px 0px;
+    }
+
+    .accomodation-border {
+        box-shadow: 8px 8px 8px #F2F2F2;
+    }
+
     .accomodation_image, .activity_image {
         width: 310px;
     }
 
-    .activity_sm_size {
+    #activity-section {
+        width: auto;
+        margin: 0px 0px 16px;
+    }
+
+    .activity_sm-size {
         height: 120px;
     }
     
-    .activity_md_size {
+    .activity_md-size {
         height: 180px;
     }
     
-    .activity_half_size {
+    .activity_half-size {
         height: 150px;
     }
     
-    .activity_lg_size {
+    .activity_lg-size {
         height: 360px;
     }
 }
 
 @media only screen and (min-width : 768px) and (max-width : 1023px) {
+    h2, h5 {
+        margin-left: 48px;
+    }
+    
     #inscription {
         display: none;
     }
@@ -524,51 +732,68 @@ p {
         padding-left: 8px;
     }
 
-    aside {
+    article {
         width: auto;
-        margin-right: 0px;
-        margin-bottom: 0px;
+        margin: 20px 30px;
+        padding: 0px 0px;
     }
 
-    #accomodation_section {
+    #accomodation-section {
         display: flex;
         flex-direction: column-reverse;
     }
 
-    .popular_image {
-        margin-right: 0px;
-    }
-
-    .accomodation_popular_border {
-        margin-right: 8px;
-        margin-left: 8px;
-    }
-
-    .popular_title, .popular_star {
-        padding-left: 10px;
-    }
-
-    article {
+    #accomodation {
         width: auto;
-        background-color: white;
-        margin: 20px 30px;
-        padding: 0px 0px;
+        margin: 16px 0px 0px;
+        padding: 8px 0px 0px;
+        background-color: #FFF;
     }
 
     .accomodation_image {
         width: 202px;
     }
     
-    .accomodation_border {
-        margin: 8px px;
-        box-shadow: #F2F2F2 10px 5px 5px;
+    .accomodation-border {
+        margin: 8px 8px;
+        box-shadow: 8px 8px 8px #F2F2F2;
+    }
+
+    aside {
+        margin-right: 0px;
+        padding: 0px 0px;
+        border-radius: inherit;
+    }
+
+    .fa-chart-line:before {
+        margin-right: 40px;
+    }
+
+    #popular {
+        padding-top: 16px;
+        padding-bottom: 16px;
+    }
+
+    .popular_image {
+        width: 260px;
+        margin-right: 16px;
+    }
+
+    .popular-accomodation-border {
+        margin-right: 40px;
+        margin-left: 40px;
+    }
+
+    #activity-section {
+        width: auto;
+        margin-top: 0px;
     }
 
     .activity_image {
         width: 310px;
     }
 
-    .activity_border {
-        margin: 16px 8px;
+    .activity-border {
+        margin: 16px 16px;
     }
 }
