--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -81,6 +81,10 @@
         height: 120px;
     }
 
+    .activity_lg-size {
+        height: 288px;
+    }
+
     footer {
         margin-top: 16px;
         padding: 16px 48px ;
