--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -112,29 +112,21 @@
         display: none;
     }
 
-    #header-nav {
+    #inscription {
         display: flex;
         align-items: center;
-        margin-bottom: 16px;
     }
 
     #nav-mobile {
         display: block;
     }
-
-    #inscription {
-        display: flex;
-        justify-content: flex-end;
-    }
     
     #accomodation-activity {
         display: flex;
-        justify-content: space-around;
         margin-bottom: 32px;
     }
 
     #accomodation-activity a {
-        border-top: none;
         padding-bottom: 16px;
         border-bottom: solid 2px #F2F2F2;
         flex: 1;
@@ -179,7 +171,7 @@
         padding-left: 8px;
     }
 
-    label {
+    label, #header-nav {
         margin-bottom: 16px;
     }
 
